--- a/src/app/resources/Layers.css
+++ b/src/app/resources/Layers.css
@@ -24,10 +24,23 @@
     bottom: 0;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 767px) {
     .layers {
         width: 100%;
         float: none;
         margin: 10px 0;
+    }
+}
+@media only screen and (max-width: 575px) {
+    .layers .scroller {
+        position: static;
+    }
+    .layers {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        overflow-y: auto;
     }
 }
