--- a/src/app/templates/App.html
+++ b/src/app/templates/App.html
@@ -1,8 +1,8 @@
 <div>
     <div id="header-container" class="site-full">
         <div id="mobilemenu">
-            <!-- <a href="#" id="mobile-mainmenu-button" class="ir">Main Menu</a>
-            <a href="#" id="mobile-searchbutton" class="ir">Search</a> -->
+            <a href="#" id="mobile-mainmenu-button" class="ir"
+                data-dojo-attach-event='click: onHamburgerClick'>Main Menu</a>
             <span>GOED | Utah Business Relocation Map</span>
         </div>
 
