--- a/src/app/templates/ReportTemplate.html
+++ b/src/app/templates/ReportTemplate.html
@@ -1,7 +1,7 @@
 <a href="#broadband" data-toggle="collapse">
     <h3 class="broadband">Broadband</h3>
 </a>
-<div id="broadband" class='collapse in'>
+<div id="broadband" class='collapse'>
     <h4 class='broadband'>Fiber Providers</h4>
     <div class="table-responsive">
         <table class='table table-striped table-condensed table-hover'>
@@ -19,7 +19,7 @@
                 {{#each broadband.fiber}}
                 <tr>
                     <td class='provider'>{{Colloquial}}</td>
-                    <td class='url'><a href="{{URL}}">{{URL}}</a></td>
+                    <td class='url'><a href="{{URL}}">{{link URL}}</a></td>
                     <td>{{ServiceClass}}</td>
                     <td class='contact-fld'>{{ContactName}}</td>
                     <td class='contact-fld'>{{ContactPhone}}</td>
@@ -46,7 +46,7 @@
                 {{#each broadband.fixed}}
                 <tr>
                     <td class='provider'>{{Colloquial}}</td>
-                    <td class='url'><a href="{{URL}}">{{URL}}</a></td>
+                    <td class='url'><a href="{{URL}}">{{link URL}}</a></td>
                     <td></td>
                     <td class='contact-fld'>{{ContactName}}</td>
                     <td class='contact-fld'>{{ContactPhone}}</td>
@@ -61,7 +61,7 @@
 <a href="#utilities" data-toggle="collapse">
     <h3 class="utilities">Utilities</h3>
 </a>
-<div class="collapse" id="utilities">
+<div class="collapse in" id="utilities">
     <h4 class="utilities">Local Exchange Areas</h4>
     <div class="table-responsive">
         <table class='table table-striped table-condensed table-hover'>
@@ -75,7 +75,7 @@
                 {{#each utilities.rural}}
                 <tr>
                     <td class='provider'>{{PROVIDER}}</td>
-                    <td><a href="#">{{WEBLINK}}</a></td>
+                    <td><a href="{{WEBLINK}}">{{link WEBLINK}}</a></td>
                 </tr>
                 {{/each}}
             </tbody>
@@ -94,25 +94,36 @@
                 {{#each utilities.electrical}}
                 <tr>
                     <td class='provider'>{{PROVIDER}}</td>
-                    <td><a href="#">{{WEBLINK}}</a></td>
+                    <td><a href="{{WEBLINK}}">{{link WEBLINK}}</a></td>
                 </tr>
                 {{/each}}
             </tbody>
         </table>
     </div>
+    <h4 class="utilities">Natural Gas</h4>
     <div class="table-responsive">
         <table class='table table-striped table-condensed table-hover'>
+            <thead>
+                <tr>
+                    <th class='provider'>Provider</th>
+                    <th>Web Site</th>
+                </tr>
+            </thead>
             <tbody>
-                <td>
-                    Natural gas service:
-                    <strong>
-                        {{#if utilities.natural_gas}}
-                        <a href='https://www.questargas.com/'>Questar Gas (https://www.questargas.com/)</a>
-                        {{else}}
-                        Unknown
-                        {{/if}}
-                    </strong>
-                </td>
+                {{#if utilities.natural_gas}}
+                <tr>
+                    <td>
+                        Questar Gas
+                    </td>
+                    <td>
+                        <a href='https://www.questargas.com/'>www.questargas.com</a>
+                    </td>
+                </tr>
+                {{else}}
+                <tr>
+                    <td>Unknown</td>
+                </tr>
+                {{/if}}
             </tbody>
         </table>
     </div>
