--- a/src/app/templates/ReportTemplate.html
+++ b/src/app/templates/ReportTemplate.html
@@ -1,7 +1,7 @@
 <a href="#broadband" data-toggle="collapse">
     <h3 class="broadband">Broadband</h3>
 </a>
-<div id="broadband" class='collapse'>
+<div id="broadband" class='collapse in'>
     <h4 class='broadband'>Fiber Providers</h4>
     <div class="table-responsive">
         <table class='table table-striped table-condensed table-hover'>
@@ -9,10 +9,10 @@
                 <tr>
                     <th class='provider'>Provider</th>
                     <th class='url'>Web Site</th>
-                    <th>Providing Fiber in:</th>
-                    <th class='contact-fld'>Contact Name</th>
                     <th class='contact-fld'>Contact Phone</th>
+                    <th class='contact-fld'>Contact Name</th>
                     <th class='contact-fld'>Contact Email</th>
+                    <th class='service-class'>Providing Fiber in:</th>
                 </tr>
             </thead>
             <tbody>
@@ -20,10 +20,10 @@
                 <tr>
                     <td class='provider'>{{Colloquial}}</td>
                     <td class='url'><a href="{{URL}}">{{link URL}}</a></td>
-                    <td>{{ServiceClass}}</td>
-                    <td class='contact-fld'>{{ContactName}}</td>
                     <td class='contact-fld'>{{ContactPhone}}</td>
+                    <td class='contact-fld'>{{ContactName}}</td>
                     <td class='contact-fld'><a href='mailto:{{ContactEmail}}'>{{ContactEmail}}</a></td>
+                    <td class='service-class'>{{ServiceClass}}</td>
                 </tr>
                 {{/each}}
             </tbody>
@@ -36,10 +36,10 @@
                 <tr>
                     <th class='provider'>Provider</th>
                     <th class='url'>Web Site</th>
-                    <th></th>
-                    <th class='contact-fld'>Contact Name</th>
                     <th class='contact-fld'>Contact Phone</th>
+                    <th class='contact-fld'>Contact Name</th>
                     <th class='contact-fld'>Contact Email</th>
+                    <th class='service-class'></th>
                 </tr>
             </thead>
             <tbody>
@@ -47,10 +47,10 @@
                 <tr>
                     <td class='provider'>{{Colloquial}}</td>
                     <td class='url'><a href="{{URL}}">{{link URL}}</a></td>
-                    <td></td>
-                    <td class='contact-fld'>{{ContactName}}</td>
                     <td class='contact-fld'>{{ContactPhone}}</td>
+                    <td class='contact-fld'>{{ContactName}}</td>
                     <td class='contact-fld'><a mailto:'{{ContactEmail}}'>{{ContactEmail}}</a></td>
+                    <td class='service-class'></td>
                 </tr>
                 {{/each}}
             </tbody>
@@ -61,7 +61,7 @@
 <a href="#utilities" data-toggle="collapse">
     <h3 class="utilities">Utilities</h3>
 </a>
-<div class="collapse in" id="utilities">
+<div class="collapse" id="utilities">
     <h4 class="utilities">Local Exchange Areas</h4>
     <div class="table-responsive">
         <table class='table table-striped table-condensed table-hover'>
