--- a/src/app/templates/ReportTemplate.html
+++ b/src/app/templates/ReportTemplate.html
@@ -26,20 +26,18 @@
                     <td class='service-class'>{{ServiceClass}}</td>
                 </tr>
                 {{/each}}
-            </tbody>
-        </table>
-    </div>
-    <h4 class="broadband">Other Fixed Broadband Providers</h4>
-    <div class="table-responsive">
-        <table class='table table-striped table-condensed table-hover'>
-            <thead>
+                <tr>
+                    <td colspan='6'></td>
+                </tr>
+                <tr>
+                    <td colspan="6" class='header'>
+                        <h4 class="broadband">Other Fixed Broadband Providers</h4>
+                    </td>
+                </tr>
                 <tr>
                     <th class='provider'>Provider</th>
                     <th class='url'>Web Site</th>
-                    <th class='contact-fld'>Contact Phone</th>
-                    <th class='contact-fld'>Contact Name</th>
-                    <th class='contact-fld'>Contact Email</th>
-                    <th class='service-class'></th>
+                    <th class='contact-fld' colspan='4'>Contact Phone</th>
                 </tr>
             </thead>
             <tbody>
@@ -47,10 +45,7 @@
                 <tr>
                     <td class='provider'>{{Colloquial}}</td>
                     <td class='url'><a href="{{URL}}">{{link URL}}</a></td>
-                    <td class='contact-fld'>{{ContactPhone}}</td>
-                    <td class='contact-fld'>{{ContactName}}</td>
-                    <td class='contact-fld'><a mailto:'{{ContactEmail}}'>{{ContactEmail}}</a></td>
-                    <td class='service-class'></td>
+                    <td class='contact-fld' colspan='4'>{{ContactPhone}}</td>
                 </tr>
                 {{/each}}
             </tbody>
