--- a/src/app/templates/Report.html
+++ b/src/app/templates/Report.html
@@ -7,7 +7,7 @@
         </div>
     </div>
 
-    <div class="site clearfix main">
+    <div class="site-full clearfix main">
         <button class="btn btn-default"
             data-dojo-attach-event="click: print">
             Print
@@ -24,7 +24,7 @@
                     <li><span data-dojo-attach-point='countyNode'></span> County</li>
                 </ul>
             </div>
-            
+
             <div class="address2 pull-right">
                 <a href="#" class="btn btn-default" target="_blank"
                     data-dojo-attach-point='getSummaryLink'>Get Summary</a>
