Google Analytics tracking code
Related #74

--- a/src/app/templates/CurrentLocation.html
+++ b/src/app/templates/CurrentLocation.html
@@ -21,7 +21,8 @@
         
         <div class="address2 pull-right">
             <a href="#" class="btn btn-default" target="_blank"
-                data-dojo-attach-point='getSummaryLink'>Get Summary</a>
+                data-dojo-attach-point='getSummaryLink'
+                data-dojo-attach-event='click: onGetSummaryClick'>Get Summary</a>
         </div>
     </div>
 </div>
