Force disabled on checkbox in build version
Workaround for xstyle bug.

Closes #79

[skip ci]

--- a/src/app/resources/Layer.css
+++ b/src/app/resources/Layer.css
@@ -19,6 +19,10 @@
     -webkit-transform: scale(1, 1);
             transform: scale(1, 1);
 }
+/* for sure a workaround for a bug in xstyle */
+.checkbox input[disabled] + label {
+    opacity: 0.65;
+}
 
 
 /* FIBER LEGEND */
