--- a/src/app/templates/App.html
+++ b/src/app/templates/App.html
@@ -8,7 +8,7 @@
 
         <div id="header-wrapper" class="site-full">
             <div id="header" class="site">
-                <span id="broadband-logo" class="ir"></span>
+                <a href='http://broadband.utah.gov' target='_blank' id="broadband-logo" class="ir"></a>
                 <div data-dojo-attach-point="currentLocationDiv"></div>
                 <div class='contact pull-right'>
                     <a href='http://utahsuresites.com' class='suresitesLogo ir' target="_blank">Sure Sites</a>
