--- a/src/app/templates/ReportTemplate.html
+++ b/src/app/templates/ReportTemplate.html
@@ -271,23 +271,31 @@
         </table>
     </div>
 
-    <!-- <div class="table-responsive">
+    <h4 class="demographics">Enterprise Zones</h4>
+    <div class="table-responsive">
         <table class="table table-striped table-condensed table-hover">
-            <tbody>
+            <thead>
                 <tr>
-                    <td>Within an enterprise zone?
-                        <b>
-                            {{#if workforce.enterprise_zone}}
-                            Yes
-                            {{else}}
-                            No
-                            {{/if}}
-                        </b>
-                    </td>
+                    <th>Name</th>
+                    <th>Expire Year</th>
+                    <th>POC Name</th>
+                    <th>POC Phone</th>
+                    <th>POC Email</th>
                 </tr>
+            </thead>
+            <tbody>
+                {{#each workforce.enterprise_zone}}
+                <tr>
+                    <td>{{ZONENAME}}</td>
+                    <td>{{EXPYR}}</td>
+                    <td>{{POC_NAME}}</td>
+                    <td>{{POC_PHONE}}</td>
+                    <td>{{POC_EMAIL}}</td>
+                </tr>
+                {{/each}}
             </tbody>
         </table>
-    </div> -->
+    </div>
 </div>
 
 <a href='#lifestyle' data-toggle='collapse'>
