--- a/src/app/resources/App.css
+++ b/src/app/resources/App.css
@@ -3,7 +3,7 @@
 @import '../../agrc/resources/map/BaseMap.css';
 @import '../../agrc/resources/map/BaseMapSelector.css';
 @import '../../dijit/themes/claro/claro.css';
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:700);
+@import url(http://fonts.googleapis.com/css?family=Lato:700);
 
 html, body, .app, .center>.site-full {
     width: 100%;
@@ -23,7 +23,7 @@ body {
     position: absolute;
 }
 .app #header #title {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Lato', sans-serif;
     font-size: 32px;
     margin: 40px 0 0 75px;
     text-shadow: 1px 1px 6px rgba(150, 150, 150, 1);
