add utah to title

--- a/src/app/templates/App.html
+++ b/src/app/templates/App.html
@@ -3,13 +3,13 @@
         <div id="mobilemenu">
             <a href="#" id="mobile-mainmenu-button" class="ir"
                 data-dojo-attach-event='click: onHamburgerClick'>Main Menu</a>
-            <span>GOED | Utah Business Relocation Map</span>
+            <span>Utah Economic Development Map</span>
         </div>
 
         <div id="header-wrapper" class="site-full">
             <div id="header" class="site">
                 <a href='http://broadband.utah.gov' target='_blank' id="broadband-logo" class="ir"></a>
-                <span class='pull-left' id="title">ECONOMIC DEVELOPMENT MAP</span>
+                <span class='pull-left' id="title">UTAH ECONOMIC DEVELOPMENT MAP</span>
                 <div data-dojo-attach-point="currentLocationDiv"></div>
                 <div class='contact pull-right'>
                     <a href='http://utahsuresites.com' class='suresitesLogo ir' target="_blank">Sure Sites</a>
