Center title in header
Closes #98

--- a/src/app/templates/App.html
+++ b/src/app/templates/App.html
@@ -9,7 +9,7 @@
         <div id="header-wrapper" class="site-full">
             <div id="header" class="site">
                 <a href='http://broadband.utah.gov' target='_blank' id="broadband-logo" class="ir"></a>
-                <span class='pull-left' id="title">Utah Economic Development Map</span>
+                <span id="title">Utah Economic Development Map</span>
                 <div data-dojo-attach-point="currentLocationDiv"></div>
                 <div class='contact pull-right'>
                     <a href='http://utahsuresites.com' class='suresitesLogo ir' target="_blank">Sure Sites</a>
