--- a/src/app/resources/App.css
+++ b/src/app/resources/App.css
@@ -25,8 +25,10 @@ body {
 .app #header #title {
     font-family: 'Lato', sans-serif;
     font-size: 32px;
-    margin: 40px 0 0 45px;
+    margin: 40px 0 0 -400px;
     text-shadow: 1px 1px 6px rgba(150, 150, 150, 1);
+    left: 50%;
+    position: absolute;
 }
 #footer-wrapper {
     position: absolute;
@@ -372,6 +374,8 @@ h4.demographics {
     .app #header #title {
         font-size: 25px;
         margin-left: 20px;
+        position: static;
+        float: left !important;
     }
 }
 @media only screen and (max-width: 900px) {
@@ -388,6 +392,11 @@ h4.demographics {
 /* == iPad/iPhone [portrait + landscape] == */
 
 @media only screen and (max-width: 1235px) {
+    .app #header #title {
+        float: none;
+        position: absolute;
+        margin-left: -190px;
+    }
     .app .site-full.clearfix.center {
         top: 217px;
     }
