begin sure sites

--- a/src/app/templates/Layers.html
+++ b/src/app/templates/Layers.html
@@ -2,5 +2,6 @@
     <div data-dojo-attach-point="searchDiv"></div>
     <div class="scroller">
         <ul data-dojo-attach-point='groupsContainer'></ul>
+        <div data-dojo-attach-point='sureSitesDiv'></div>
     </div>
 </div>
