--- a/src/app/resources/App.css
+++ b/src/app/resources/App.css
@@ -262,6 +262,10 @@ h3.lifestyle {
 h3.demographics {
     background: #C22127 url(img/icons/demographics.svg) 15px 15px no-repeat;
 }
+.sure-sites.group,
+h3.sure-sites {
+    background: #C221B2 url(img/icons/demographics.svg) 15px 15px no-repeat;
+}
 
 /* Colors for second level layer nav */
 .broadband ul,
@@ -287,7 +291,7 @@ h4.lifestyle {
 .demographics ul,
 .demographics>button,
 h4.demographics {
-    background-color: #9B1D21;
+    background-color: #9c1d21;
 }
 
 /* ********************** Alignments ********************** */
