--- a/src/app/resources/CurrentLocation.css
+++ b/src/app/resources/CurrentLocation.css
@@ -6,8 +6,13 @@
 }
 .current-location h4 {
     color: #fff;
-    padding: 0 0 15px 0;
+    padding: 0 0 5px 0;
     margin: 0;
+}
+.current-location h4 img {
+    width: 21px;
+    height: 29px;
+    padding-left: 5px;
 }
 .current-location .glyphicon-refresh {
     font-size: 34px;
