--- a/src/app/templates/CurrentLocation.html
+++ b/src/app/templates/CurrentLocation.html
@@ -1,5 +1,5 @@
 <div>
-    <h4>Current Location</h4>
+    <h4>Current Location<img src="app/resources/img/markers/currentLocation.svg" alt="pin"></h4>
     <div class="clearfix"></div>
 
     <span class="glyphicon glyphicon-refresh hidden"
@@ -7,7 +7,7 @@
     <p data-dojo-attach-point='helpTxt'>
         Click on the map to get info about the current location.
     </p>
-    
+
     <div data-dojo-attach-point="addressContainer" class='hidden'>
         <div class="address pull-left">
             <ul>
@@ -18,7 +18,7 @@
                 <li><span data-dojo-attach-point='countyNode'></span> County</li>
             </ul>
         </div>
-        
+
         <div class="address2 pull-right">
             <a href="#" class="btn btn-default" target="_blank"
                 data-dojo-attach-point='getSummaryLink'
