--- a/src/app/tests/LayerTests.html
+++ b/src/app/tests/LayerTests.html
@@ -19,6 +19,7 @@
 
     <!-- JAVASCRIPT -->
     <script type='text/javascript' src="../../dojo/dojo.js"></script>
+    <script type='text/javascript' src="../../app/packages.js"></script>
     <script type="text/javascript">
         var baseUrl = window.location.pathname.replace(/\/[^\/]+$/, '') + '/' + '../../';
         var widgetUnderTest;
@@ -26,17 +27,7 @@
         var widgetUnderTest4;
 
         require({
-            baseUrl: baseUrl,
-            packages: ['app', 'esri', 'dojo', 'dijit', 'dojox', 'xstyle',
-            {
-                name: 'jquery',
-                location: 'jquery/dist',
-                main: 'jquery'
-            },{
-                name: 'bootstrap',
-                location: 'bootstrap',
-                main: 'dist/js/bootstrap'
-            }]
+            baseUrl: baseUrl
         }, [
             'app/Layer',
 
