--- a/src/app/tests/ReportTemplateTest.html
+++ b/src/app/tests/ReportTemplateTest.html
@@ -1,36 +1,23 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-    
+
     <link rel="stylesheet" href="../../app/resources/App.css">
     <link rel="stylesheet" href="../../app/resources/Report.css">
 
     <script type='text/javascript' src="../../dojo/dojo.js"></script>
+    <script type='text/javascript' src="../../app/packages.js"></script>
     <script type="text/javascript">
         var baseUrl = window.location.pathname.replace(/\/[^\/]+$/, '') + '/' + '../../';
 
         require({
-            baseUrl: baseUrl,
-            packages: ['app', 'esri', 'dojo', 'dijit', 'dojox', 'xstyle',
-            {
-                name: 'jquery',
-                location: 'jquery/dist',
-                main: 'jquery'
-            },{
-                name: 'handlebars',
-                location: './handlebars',
-                main: 'handlebars'
-            },{
-                name: 'bootstrap',
-                location: 'bootstrap',
-                main: 'dist/js/bootstrap'
-            }]
+            baseUrl: baseUrl
         }, [
             'dojo/text!app/templates/ReportTemplate.html',
             'dojo/text!app/tests/data/report.json',
 
             'handlebars',
-            
+
             'jquery',
             'bootstrap',
 
@@ -47,6 +34,6 @@
     </script>
 </head>
 <body class="report">
-    
+
 </body>
 </html>
