--- a/src/app/tests/SliderTests.html
+++ b/src/app/tests/SliderTests.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="../../app/resources/App.css">
+    <link rel="stylesheet" href="../resources/App.css">
     <style type='text/css'>
         body {
             padding: 50px;
@@ -16,26 +16,13 @@
 
     <!-- JAVASCRIPT -->
     <script type='text/javascript' src="../../dojo/dojo.js"></script>
+    <script type='text/javascript' src="../../app/packages.js"></script>
     <script type="text/javascript">
         var baseUrl = window.location.pathname.replace(/\/[^\/]+$/, '') + '/' + '../../';
         var widgetUnderTest;
 
         require({
-            baseUrl: baseUrl,
-            packages: ['app', 'esri', 'dojo', 'dijit', 'dojox', 'xstyle',
-            {
-                name: 'slider',
-                location: './seiyria-bootstrap-slider',
-                main: 'js/bootstrap-slider'
-            },{
-                name: 'jquery',
-                location: 'jquery/dist',
-                main: 'jquery'
-            },{
-                name: 'bootstrap',
-                location: 'bootstrap',
-                main: 'dist/js/bootstrap'
-            }]
+            baseUrl: baseUrl
         }, [
             'app/Slider',
 
