initial fleshing out of sure sites group
Related to #107

--- a/src/app/resources/App.css
+++ b/src/app/resources/App.css
@@ -3,7 +3,6 @@
 @import '../../agrc/resources/map/BaseMap.css';
 @import '../../dijit/themes/claro/claro.css';
 @import '../../layer-selector/resources/LayerSelector.css';
-@import url(http://fonts.googleapis.com/css?family=Lato:700);
 @import 'CurrentLocation.css';
 @import 'FindAddress.css';
 @import 'Group.css';
@@ -11,6 +10,8 @@
 @import 'Layers.css';
 @import 'Search.css';
 @import 'Slider.css';
+@import 'SureSites.css';
+@import url(http://fonts.googleapis.com/css?family=Lato:700);
 
 html, body, .app, .center>.site-full {
     width: 100%;
