--- a/src/app/templates/SureSites.html
+++ b/src/app/templates/SureSites.html
@@ -3,8 +3,64 @@
         <li class='sure-sites group'>
             <a href='#${id}_sub' class='toggle-layer'
                 data-toggle='collapse' data-layers='??'>Sure Sites</a>
-            <ul id='${id}_sub' class='collapse' data-dojo-attach-point='layersContainer'>
-                controls go here
+            <ul id='${id}_sub' class='collapse' data-dojo-attach-point='filtersContainer'>
+                <label>Property Type</label>
+                <li class='checkbox layer'>
+                    <input type="checkbox" id='${id}_land' value=''>
+                    <label for='${id}_land' data-dojo-attach-point='label'>
+                        Land
+                    </label>
+                </li>
+                <li class='checkbox layer'>
+                    <input type="checkbox" id='${id}_office' value=''>
+                    <label for='${id}_office' data-dojo-attach-point='label'>
+                        Existing Office Building
+                    </label>
+                </li>
+                <li class='checkbox layer'>
+                    <input type="checkbox" id='${id}_industrial' value=''>
+                    <label for='${id}_industrial' data-dojo-attach-point='label'>
+                        Existing Industrial Building
+                    </label>
+                </li>
+                <label>County Type</label>
+                <li class='checkbox layer'>
+                    <input type="checkbox" id='${id}_urban' value=''>
+                    <label for='${id}_urban' data-dojo-attach-point='label'>
+                        Urban
+                    </label>
+                </li>
+                <li class='checkbox layer'>
+                    <input type="checkbox" id='${id}_rural' value=''>
+                    <label for='${id}_rural' data-dojo-attach-point='label'>
+                        Rural
+                    </label>
+                </li>
+                <label>Acreage</label>
+                <li class='slider-container'>
+                    <div>
+                        <span data-dojo-attach-point='acreageMin'>1</span> - <span data-dojo-attach-point='acreageMax'>3,100</span>
+                    </div>
+                    <input type="text" value='' data-dojo-attach-point='acreageSlider'
+                        data-slider-min='1'
+                        data-slider-max='3100'
+                        data-slider-value='[1,3100]'
+                        data-slider-tooltip='hide'
+                        data-provide='slider'>
+                </li>
+                <label>Total Building Sq. Ft.</label>
+                <li class='slider-container'>
+                    <div>
+                        <span data-dojo-attach-point='sqftMin'>20,000</span> - <span data-dojo-attach-point='sqftMax'>1,000,000</span>
+                    </div>
+                    <input type="text" value='' data-dojo-attach-point='sqftSlider'
+                        data-slider-min='20000'
+                        data-slider-max='1000000'
+                        data-slider-value='[20000,1000000]'
+                        data-slider-step='5000'
+                        data-slider-tooltip='hide'
+                        data-provide='slider'>
+                </li>
             </ul>
         </li>
     </ul>
