--- a/src/app/resources/Slider.css
+++ b/src/app/resources/Slider.css
@@ -1,4 +1,7 @@
 @import '../../seiyria-bootstrap-slider/dist/css/bootstrap-slider.css';
-.slider {
-
+.slider-handle {
+        background-image: linear-gradient(to bottom, #828282 0%, #444444 100%);
+}
+.slider-selection {
+    background-image: linear-gradient(to bottom, #e2e2e2 0%, #7d7d7d 100%);
 }
