--- a/src/app/templates/SureSites.html
+++ b/src/app/templates/SureSites.html
@@ -45,8 +45,7 @@
                         data-slider-min='1'
                         data-slider-max='3100'
                         data-slider-value='[1,3100]'
-                        data-slider-tooltip='hide'
-                        data-provide='slider'>
+                        data-slider-tooltip='hide'>
                 </li>
                 <label>Total Building Sq. Ft.</label>
                 <li class='slider-container'>
@@ -58,8 +57,7 @@
                         data-slider-max='1000000'
                         data-slider-value='[20000,1000000]'
                         data-slider-step='5000'
-                        data-slider-tooltip='hide'
-                        data-provide='slider'>
+                        data-slider-tooltip='hide'>
                 </li>
             </ul>
         </li>
