add sherlock for searching cities
Related to #108

--- a/src/app/templates/App.html
+++ b/src/app/templates/App.html
@@ -24,7 +24,9 @@
 
     <div class="site-full clearfix center">
         <div class="site-full" data-dojo-attach-point='mapContainer'>
-            <div data-dojo-attach-point="mapDiv" class='map'></div>
+            <div data-dojo-attach-point="mapDiv" class='map'>
+                <div data-dojo-attach-point="sherlockDiv"></div>
+            </div>
             <div data-dojo-attach-point='layersDiv' class='layers'></div>
         </div>
     </div>
