--- a/src/app/resources/App.css
+++ b/src/app/resources/App.css
@@ -11,6 +11,7 @@
 @import 'Search.css';
 @import 'Slider.css';
 @import 'SureSites.css';
+@import '../../sherlock/resources/Sherlock.css';
 @import url(http://fonts.googleapis.com/css?family=Lato:700);
 
 html, body, .app, .center>.site-full {
@@ -56,6 +57,10 @@ body {
 .app .map .selectorMain {
     left: 50px;
     top: 17px;
+}
+.app .sherlock {
+    left: 60px;
+    top: 15px;
 }
 
 /* layer-selector overrides */
