add units to acres and square footage

--- a/src/app/templates/SureSites.html
+++ b/src/app/templates/SureSites.html
@@ -39,7 +39,7 @@
                 <label>Acreage</label>
                 <li class='slider-container'>
                     <div>
-                        <span data-dojo-attach-point='acreageMin'>1</span> - <span data-dojo-attach-point='acreageMax'>3,100</span>
+                        <span data-dojo-attach-point='acreageMin'>1</span> - <span data-dojo-attach-point='acreageMax'>3,100</span> ac.
                     </div>
                     <input type="text" value='' data-dojo-attach-point='acreageSlider'
                         data-slider-min='1'
@@ -50,7 +50,7 @@
                 <label>Total Building Sq. Ft.</label>
                 <li class='slider-container'>
                     <div>
-                        <span data-dojo-attach-point='sqftMin'>20,000</span> - <span data-dojo-attach-point='sqftMax'>1,000,000</span>
+                        <span data-dojo-attach-point='sqftMin'>20,000</span> - <span data-dojo-attach-point='sqftMax'>1,000,000</span> sqft.
                     </div>
                     <input type="text" value='' data-dojo-attach-point='sqftSlider'
                         data-slider-min='20000'
