Replace sure sites text with logo in group header
Related to #113

--- a/src/app/templates/SureSites.html
+++ b/src/app/templates/SureSites.html
@@ -2,7 +2,7 @@
     <ul>
         <li class='sure-sites group'>
             <a href='#${id}_sub' class='toggle-layer'
-                data-toggle='collapse' data-layers='??'>Sure Sites</a>
+                data-toggle='collapse' data-layers='??'><img src="app/resources/img/suresites.svg" alt=""></a>
             <ul id='${id}_sub' class='collapse' data-dojo-attach-point='filtersContainer'>
                 <label>Property Type</label>
                 <li class='checkbox layer'>
