--- a/src/app/resources/SureSites.css
+++ b/src/app/resources/SureSites.css
@@ -1,3 +1,11 @@
+.sure-sites .toggle-layer {
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 55px;
+}
+.sure-sites .toggle-layer img {
+    height: 35px;
+}
 .sure-sites .group>ul>label {
     margin-left: 15px;
     margin-bottom: 0;
