--- a/src/app/resources/SureSites.css
+++ b/src/app/resources/SureSites.css
@@ -2,6 +2,7 @@
     padding-top: 8px;
     padding-bottom: 8px;
     padding-left: 55px;
+    border-bottom: solid 1px #333;
 }
 .sure-sites .toggle-layer img {
     height: 35px;
