--- a/src/app/templates/SureSites.html
+++ b/src/app/templates/SureSites.html
@@ -2,7 +2,10 @@
     <ul>
         <li class='sure-sites group'>
             <a href='#${id}_sub' class='toggle-layer'
-                data-toggle='collapse' data-layers='??'><img src="app/resources/img/suresites.svg" alt=""></a>
+                data-toggle='collapse' data-layers='??'>
+                <img src="app/resources/img/suresites.svg" alt="">
+                <span class="glyphicon glyphicon-chevron-down"></span>
+            </a>
             <ul id='${id}_sub' class='collapse' data-dojo-attach-point='filtersContainer'>
                 <label>Property Type</label>
                 <li class='checkbox layer'>
