toggle sure sites layer with group

--- a/src/app/templates/SureSites.html
+++ b/src/app/templates/SureSites.html
@@ -2,7 +2,7 @@
     <ul>
         <li class='sure-sites group'>
             <a href='#${id}_sub' class='toggle-layer'
-                data-toggle='collapse' data-layers='??'>
+                data-toggle='collapse'>
                 <img src="app/resources/img/suresites.svg" alt="">
                 <span class="glyphicon glyphicon-chevron-down"></span>
             </a>
