default all sections in report to be open
This will make printing easier and will give the user a better chance
of seeing all of the data.

--- a/lib/app/templates/ReportTemplate.html
+++ b/lib/app/templates/ReportTemplate.html
@@ -56,7 +56,7 @@
 <a href="#utilities" data-toggle="collapse">
     <h3 class="utilities">Utilities</h3>
 </a>
-<div class="collapse" id="utilities">
+<div class="collapse in" id="utilities">
     <h4 class="utilities">Local Exchange Areas</h4>
     <div class="table-responsive">
         <table class='table table-striped table-condensed table-hover'>
@@ -119,7 +119,7 @@
 <a href="#transportation" data-toggle="collapse">
     <h3 class="transportation">Transportation</h3>
 </a>
-<div id="transportation" class="collapse">
+<div id="transportation" class="collapse in">
     <h4 class="transportation">Major Roads, Freeways, US Highways and State Highways within 1 Mile</h4>
     <div class="table-responsive">
         <table class='table table-striped table-condensed table-hover'>
@@ -200,7 +200,7 @@
 <a href="#demographics" data-toggle="collapse">
     <h3 class="demographics">Workforce</h3>
 </a>
-<div id="demographics" class="collapse">
+<div id="demographics" class="collapse in">
     <h4 class="demographics">Enterprise Zones</h4>
     <div class="table-responsive">
         <table class="table table-striped table-condensed table-hover">
@@ -293,7 +293,7 @@
 <a href='#lifestyle' data-toggle='collapse'>
     <h3 class="lifestyle">Lifestyle/Recreation</h3>
 </a>
-<div id="lifestyle" class="collapse">
+<div id="lifestyle" class="collapse in">
     <h4 class="lifestyle">National Parks</h4>
     <div class="table-responsive">
         <table class='table table-striped table-condensed table-hover half'>
