make report look better when printed
Brings it closer to mockups from Kelleigh
Related to #110

--- a/lib/app/templates/ReportTemplate.html
+++ b/lib/app/templates/ReportTemplate.html
@@ -9,7 +9,7 @@
                 <tr>
                     <th class='provider'>Provider</th>
                     <th class='url'>Web Site</th>
-                    <th class='contact-fld'>Contact Phone</th>
+                    <th class='contact-fld'>Phone</th>
                     <th class='contact-fld'>Contact Name</th>
                     <th class='contact-fld'>Contact Email</th>
                     <th class='service-class'>Providing Fiber in:</th>
@@ -37,7 +37,7 @@
                 <tr>
                     <th class='provider'>Provider</th>
                     <th class='url'>Web Site</th>
-                    <th class='contact-fld' colspan='4'>Contact Phone</th>
+                    <th class='contact-fld' colspan='4'>Phone</th>
                 </tr>
             </thead>
             <tbody>
