--- a/lib/app/resources/Report.css
+++ b/lib/app/resources/Report.css
@@ -1,3 +1,11 @@
+.report .logo-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
+    margin: 5px 10px;
+}
 .report .main {
     margin-top: 20px;
     padding: 0 10px;
@@ -18,9 +26,6 @@
 }
 .report td.header {
     padding: 0 !important;
-}
-.report #footer-wrapper {
-    position: static;
 }
 
 /* modify address css for report */
@@ -81,5 +86,41 @@
     .current-location {
         visibility: hidden;
         display: none;
+    }
+    body {
+        font-size: 12px;
+    }
+    h2,
+    .address {
+        padding-left: 15px;
+    }
+    .report a[data-toggle='collapse'] h3 {
+        background: none;
+        padding-left: 15px;
+    }
+    .report h3 {
+        padding-bottom: 0;
+    }
+    h3.sure-sites {
+        color: #000000;
+    }
+    h3.broadband {
+        color: #000000;
+    }
+    h3.transportation {
+        color: #E09525;
+    }
+    h3.utilities {
+        color: #107A89;
+    }
+    h3.lifestyle {
+        color: #0D8C44;
+    }
+    h3.demographics {
+        color: #C22127;
+    }
+    .report h4 {
+        background-color: transparent;
+        color: #333
     }
 }
