--- a/lib/app/templates/Report.html
+++ b/lib/app/templates/Report.html
@@ -1,12 +1,12 @@
 <div>
-    <div id="header-container" class="site-full">
-        <div id="header-wrapper" class="site-full">
-            <div id="header" class="site">
-                <a href='./' id="broadband-logo" class="ir"></a>
-            </div>
-        </div>
+    <div class="logo-container">
+        <img src="app/resources/img/goed.png" alt="GOED Logo">
+        <img data-dojo-attach-point='sureSitesLogo'
+            src="app/resources/img/suresites.png"
+            class='hidden'
+            alt="SURE Sites Logo">
+        <img src="app/resources/img/edc.png" alt="EDC Utah Logo">
     </div>
-
     <div class="site-full clearfix main">
         <button class="btn btn-default"
             data-dojo-attach-event="click: print">
@@ -35,24 +35,6 @@
         <div data-dojo-attach-point="errMsg" class="alert alert-danger hidden"></div>
         <div data-dojo-attach-point="loader" class="alert alert-info hidden">
             Generating report... <span class="glyphicon glyphicon-refresh"></span>
-        </div>
-    </div>
-
-    <div id="footer-wrapper" class="site-full">
-        <div id="footer" class="site">
-            <a href="http://edcutah.org" id="edcLogo" class="ir" target='_blank'>Economic Development Corporation of Utah</a>
-            <a href="http://goed.utah.gov" id="goedLogo" class="ir" target='_blank'>Governor's Office of Economic Development</a>
-
-            <div class="col20 pull-right">
-                <ul>
-                    <li><a href="http://www.utah.gov/main/index" target='_blank'>Utah.gov</a></li>
-                    <li><a href="http://www.utah.gov/disclaimer.html" target='_blank'>Terms of Use</a></li>
-                    <li><a href="http://www.utah.gov/privacypolicy.html" target='_blank'>Privacy Policy</a></li>
-                    <li><a href="http://www.utah.gov/accessibility.html" target='_blank'>Accessibility Policy</a></li>
-                    <li><a href="http://www.utah.gov/translate.html" target='_blank'>Translate</a></li>
-                </ul>
-            </div>
-            <div class="clearfix"></div>
         </div>
     </div>
 </div>
