add sure sites-specific report content
Closes #110

--- a/lib/app/templates/Report.html
+++ b/lib/app/templates/Report.html
@@ -30,6 +30,7 @@
                     data-dojo-attach-point='getSummaryLink'>Get Summary</a>
             </div>
         </div>
+        <div data-dojo-attach-point="sureSitesAdditionContainer"></div>
         <div data-dojo-attach-point="reportContainer"></div>
 
         <div data-dojo-attach-point="errMsg" class="alert alert-danger hidden"></div>
