--- a/lib/app/resources/Report.css
+++ b/lib/app/resources/Report.css
@@ -81,6 +81,28 @@
 .report h4.no-background {
     color: #333;
 }
+.report .sure-sites {
+    display: flex;
+}
+.report .sure-sites strong {
+    font-size: 16px;
+}
+.report .sure-sites .data {
+    width: 65%;
+    flex-grow: 2;
+}
+.report .sure-sites .photos {
+    width: 35%;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.report .sure-sites .photos img {
+    max-width: 100%;
+    border: solid 1px #333;
+    margin: 5px;
+}
 @media print {
     .report .btn,
     .current-location {
