--- a/lib/app/templates/Report.html
+++ b/lib/app/templates/Report.html
@@ -35,7 +35,7 @@
 
         <div data-dojo-attach-point="errMsg" class="alert alert-danger hidden"></div>
         <div data-dojo-attach-point="loader" class="alert alert-info hidden">
-            Generating report... <span class="glyphicon glyphicon-refresh"></span>
+            We need to generate a custom report for this location. This may take a few seconds... <span class="glyphicon glyphicon-refresh"></span>
         </div>
     </div>
 </div>
