--- a/lib/app/resources/FindAddress.css
+++ b/lib/app/resources/FindAddress.css
@@ -37,3 +37,9 @@
     border-bottom-left-radius: 3px;
     border-bottom-right-radius: 3px;
 }
+.find-address .form-group .help-block {
+    right: 8px;
+    position: absolute;
+    top: 2px;
+    z-index: 100;
+}
