--- a/lib/app/resources/App.css
+++ b/lib/app/resources/App.css
@@ -62,6 +62,10 @@ body {
     left: 60px;
     top: 15px;
 }
+.app .sherlock .input-group input,
+.app .sherlock .input-group span {
+    border-color: #57585A;
+}
 
 /* layer-selector overrides */
 .layer-selector {
