--- a/lib/app/templates/Group.html
+++ b/lib/app/templates/Group.html
@@ -1,6 +1,5 @@
 <li class="${groupClass}">
-    <a href='#${id}_sub' class='toggle-layer'
-        data-toggle='collapse' data-layers='0,1'>${name}
+    <a href='#${id}_sub' class='toggle-layer' data-toggle='collapse'>${name}
         <span class="glyphicon glyphicon-chevron-down"></span>
     </a>
     <ul id='${id}_sub' class='collapse'
